<resources>
    <string name="app_name">HamRadioTools</string>
    <string name="lheard">Last Heard</string>
    <string name="callsignHint">  Enter a Callsign</string>
    <string name="btn_to_logger">Log Contact</string>
    <string name="btn_to_viewlog">View Log</string>
    <string name="btn_to_dxspots">Dx Spots</string>
    <string name="loggerTitle">Logging Contact With</string>
    <string name="txtViewDate">Date of Contact: </string>
    <string name="txtViewfreq">Freqency:</string>
    <string name="etxtFreq">Enter Frequency</string>
    <string name="btnSubmitLog">Submit to Log</string>
    <string name="modebtnUSB">USB</string>
    <string name="modebtnLSB">LSB</string>
    <string name="modebtnAM">AM</string>
    <string name="modebtnFM">FM</string>
    <string name="txtPower">Operating Power</string>
    <string name="txtComments">(Optional) Comments</string>
    <string name="txtLogBook">LOGBOOK</string>
    <string name="title_activity_dx_spots">DxSPots</string>

</resources>
