<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:background="@drawable/background_color"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/loggerTitle"
        android:layout_width="354dp"
        android:layout_height="48dp"
        android:layout_above="@+id/btn_to_logger"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/loggerTitle"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textFontWeight="bold"
        android:textIsSelectable="true"
        android:textSize="31sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/callLogged"
        android:layout_width="125dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loggerTitle" />

    <TextView
        android:id="@+id/txtViewDate"
        android:layout_width="131dp"
        android:layout_height="29dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:text="@string/txtViewDate"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/callLogged" />

    <TextView
        android:id="@+id/txtViewDisplayDate"
        android:layout_width="201dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="24dp"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toEndOf="@+id/txtViewDate"
        app:layout_constraintTop_toBottomOf="@+id/callLogged" />

    <EditText
        android:id="@+id/etxtFreq"
        android:layout_width="147dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="104dp"
        android:ems="10"
        android:hint="@string/etxtFreq"
        android:inputType="numberDecimal"
        android:textAlignment="viewStart"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewDate" />

    <Button
        android:id="@+id/btnSubmitLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btnSubmitLog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
 <RadioGroup
        android:layout_width="114dp"
        android:layout_height="107dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxtFreq">

        <RadioButton
            android:id="@+id/modebtnUSB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/modebtnUSB"
            android:textColor="@android:color/background_light" />

        <RadioButton
            android:id="@+id/modebtnLSB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/modebtnLSB"
            android:textColor="@android:color/background_light" />

        <RadioButton
            android:id="@+id/modebtnAM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/modebtnAM"
            android:textColor="@android:color/background_light" />

        <RadioButton
            android:id="@+id/modebtnFM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/modebtnFM"
            android:textColor="@android:color/background_light" />
    </RadioGroup>

   

</android.support.constraint.ConstraintLayout>