<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:background="@drawable/background_color"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/text_view_result"
        android:layout_width="wrap_content"
        android:layout_height="334dp"
        android:layout_above="@+id/btn_to_logger"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif"
        android:textColor="#ffffff"
        android:textIsSelectable="true"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button_parse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enterCall_Txt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="Call Search" />

    <EditText
        android:id="@+id/enterCall_Txt"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/callsignHint"
        android:imeOptions="actionNone"
        android:inputType="text"
        android:singleLine="false"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textIsSelectable="false"
        android:textSize="26sp" />

    <Button
        android:id="@+id/btn_to_logger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="18dp"
        android:text="@string/btn_to_logger" />

    <Button
        android:id="@+id/btn_to_viewlog"
        android:layout_width="118dp"
        android:layout_height="61dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="29dp"
        android:layout_marginBottom="12dp"
        android:text="@string/btn_to_viewlog" />


</RelativeLayout>